plugins/groovy/testdata/highlighting/pre30/applicationTupleInitializer.groovy
def (v) = <error descr="Application initializer is not supported in current version">String.valueOf 42</error>
(v) = <error descr="Application initializer is not supported in current version">String.valueOf 42</error>
